force-app/main/default/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <description>Salesforce certification and accreditation metadata with verification lineage.</description>
    <label>Credential</label>
    <nameField>
        <displayFormat>CRD-{00000}</displayFormat>
        <label>Credential Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>