force-app/main/default/objects/Credential__c/fields/Credential_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_ID__c</fullName>
    <externalId>true</externalId>
    <label>Credential ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>