force-app/main/default/objects/Credential__c/fields/Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Credential_Name__c</fullName>
    <label>Credential Name</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>