force-app/main/default/objects/Credential__c/fields/Days_To_Expiry__c.field-meta.xml
<CustomField><fullName>Days_To_Expiry__c</fullName><description>Calendar days remaining until credential expiry.</description><formula>IF(ISBLANK(Expiry_Date__c), NULL, Expiry_Date__c - TODAY())</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Days to Expiry</label><precision>8</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>