force-app/main/default/objects/Credential__c/fields/Evidence_URL__c.field-meta.xml
<CustomField>
    <fullName>Evidence_URL__c</fullName>
    <label>Evidence URL</label>
    <type>Url</type>
</CustomField>