force-app/main/default/objects/Credential__c/fields/Expiry_Risk_Band__c.field-meta.xml
<CustomField><fullName>Expiry_Risk_Band__c</fullName><description>Operational renewal risk bucket.</description><label>Expiry Risk Band</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value><value><fullName>0-30 days</fullName><default>false</default><label>0-30 days</label></value><value><fullName>31-60 days</fullName><default>false</default><label>31-60 days</label></value><value><fullName>61-90 days</fullName><default>false</default><label>61-90 days</label></value><value><fullName>Beyond 90 days</fullName><default>false</default><label>Beyond 90 days</label></value><value><fullName>No expiry</fullName><default>false</default><label>No expiry</label></value></valueSetDefinition></valueSet></CustomField>