force-app/main/default/objects/Credential__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <label>Issuer</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>