force-app/main/default/objects/Credential__c/fields/Last_Checked_At__c.field-meta.xml
<CustomField><fullName>Last_Checked_At__c</fullName><label>Last Checked At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>