force-app/main/default/objects/Credential__c/fields/Maintenance_Date__c.field-meta.xml
<CustomField><fullName>Maintenance_Date__c</fullName><label>Maintenance Date</label><trackHistory>true</trackHistory><type>Date</type></CustomField>