force-app/main/default/objects/Credential__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Verification State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
                <default>true</default>
                <label>Verified</label>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Maintenance Due</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>