force-app/main/default/objects/Credential__c/fields/Verification_Error__c.field-meta.xml
<CustomField><fullName>Verification_Error__c</fullName><label>Redacted Verification Error</label><length>1000</length><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>