force-app/main/default/objects/Credential__c/fields/Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>Verification_Source__c</fullName>
    <label>Verification Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>