force-app/main/default/objects/Credential__c/validationRules/Credential_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Issue_Date__c)), NOT(ISBLANK(Expiry_Date__c)), Expiry_Date__c &lt; Issue_Date__c)</errorConditionFormula>
    <errorMessage>Credential expiry cannot precede the issue date.</errorMessage>
</ValidationRule>