force-app/main/default/objects/Credential__c/validationRules/Secure_Evidence_URL.validationRule-meta.xml
<ValidationRule><fullName>Secure_Evidence_URL</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Evidence_URL__c)), NOT(BEGINS(LOWER(Evidence_URL__c), "https://")))</errorConditionFormula><errorDisplayField>Evidence_URL__c</errorDisplayField><errorMessage>Evidence links must use HTTPS and an EXL-approved host.</errorMessage></ValidationRule>